modal bug fixed and min hight and overflow issues resolved

--- a/uxstudio-devchallenge.frontend/src/assets/main.css
+++ b/uxstudio-devchallenge.frontend/src/assets/main.css
@@ -7,10 +7,6 @@ body {
   font-family: 'LexendDeca', Arial, sans-serif;
 }
 
-html,
-body,
 #app {
-  width: 100%;
-  height: 100vh;
-  margin: 0;
+  min-height: 100vh;
 }
